--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     defaultPropertyInclusion: non-null
   datasource:
     url: jdbc:h2:mem:mydb
-    username: cv_admin
+    username: admin
     password: password
     driverClassName: org.h2.Driver
   jpa:
